# master-thesis

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ai_platform_config.yml  download.sh  pyproject.toml  setup.py  tasks.py
data/results/: cookpad_ebr_results.csv  cookpad_fm_all_results.csv  cookpad_fm_query_results.csv  cookpad_fwfm_all_results.csv  cookpad_fwfm_all_without_1st_results.csv  cookpad_fwfm_query_results.csv  cookpad_fwfm_selected_results.csv  cookpad_naive_results.csv  cookpad_nrmf_simple_all_results.csv  cookpad_nrmf_simple_all_with_1st_results.csv  cookpad_nrmf_simple_query_results.csv  cookpad_nrmf_simple_query_with_1st_results.csv
docs/: Makefile  conf.py  index.rst  make.bat
logs/fit/: .gitignore
notebooks/: fwfm.ipynb  fwfm_cookpad.ipynb  fwfm_msmarco.ipynb  validation_cookpad.ipynb
src/: config.py  evaluate_model.py  evaluation.py  main.py  task.py  train_model.py  training.py
src/config/: base_configs.py  config.py  cookpad.py  msmarco.py
src/data/: cloud_storage.py  data_generator.py  data_processors.py  generate_listwise.py  generate_n_listwise.py  generate_triples.py  preprocessors.py  queries.py  recipes.py  triples_to_dataset.py  triples_to_dataset_concat.py  triples_to_dataset_multiple.py
src/layers/: bias.py  interaction.py
src/losses/: pairwise_losses.py  pointwise_losses.py
src/metrics/: metrics.py
src/models/: attention.py  autoint.py  base_model.py  evaluate_model.py  fm.py  naive.py  nrmf.py  nrmf_concat.py  nrmf_simple.py  predict_model.py  representation.py  simple_model.py  train_model.py
src/utils/: logger.py  plot.py  seed.py
test/data/: test_data_generator.py  test_queries.py
test/losses/: test_pairwise_losses.py
(+20 files in other folders)
