[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kentaro Takiguchi"]
packages = [
    { include = "./src" },
]

[tool.poetry.dependencies]
# poetry run pip install -e .
python = "3.7.7"
numpy = "^1.18.4"
pandas = "^1.0.3"
tensorflow-estimator = "2.1"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
jupyterlab = "^2.1.3"
tqdm = "^4.46.0"
sklearn = "^0.0"
pydot = "^1.4.1"
graphviz = "^0.14"
click = "^7.1.2"
python-dotenv = "^0.13.0"
google-cloud-storage = "^1.29.0"
mlflow = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
jupyter = "^1.0.0"

[tool.dephell.main]
# Run `dephell deps convert` to genereate setup.py
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
