[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kentaro Takiguchi"]
packages = [
    { include = "./src" },
]

[tool.poetry.dependencies]
# poetry run pip install -e .
python = "3.7.9"
numpy = "^1.18.4"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.11.0"
tqdm = "^4.46.0"
sklearn = "^0.0"
pydot = "^1.4.1"
click = "^7.1.2"
python-dotenv = "^0.13.0"
google-cloud-storage = "^1.29.0"
annoy = "^1.16.3"
loguru = "^0.5.1"
statsmodels = "^0.11.1"
pingouin = "^0.3.7"
tensorflow = "^2.3.1"
tensorflow-estimator = "^2.3.0"
invoke = "^1.4.1"
google-api-python-client = "^1.12.8"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
jupyter = "^1.0.0"
jupyterlab = "^2.1.5"

[tool.dephell.main]
# Run `dephell deps convert` to genereate setup.py
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
